# patricks

./: .gitignore  README.md  agiteam.json  agiteam.sh  docker-compose.yml  doctor.sh  project_state.yaml
.claude/: mempalace-autosave.sh.archived
.github/workflows/: build-windows.yml  e2e-linux.yml
brain/Architect/: persona.md
brain/Designer/: persona.md
brain/DevOps/: persona.md
brain/DeveloperBE/: persona.md
brain/DeveloperFE/: persona.md
brain/PM/: persona.md
brain/QA/: persona.md
brain/Shared/: persona.md
documents/: README.md
documents/00.standard/: RACI매트릭스.latest.md  README.md  폴더구조.latest.md
documents/01.proposal/: README.md
documents/02.reverse/: README.md
documents/03.management/: README.md
documents/04.development/: README.md
reports/: 202606222040_기술스택분析권고보고서_v0.1.html  202606260038_테마선택UI시안_v0.1.html  202606260052_가이드화면시안_v0.1.html  202607140112_lugh_E2E도입조사_v0.1.md  202607152237_lugh_결함27_FE구현체크리스트_v0.1.md  202607161951_lugh_웹검색29_BE구현체크리스트_v0.1.md
system/: README.md
system/lugh/src-tauri/: Cargo.toml  tauri.conf.json
system/lugh/src-tauri/icons/: icon.icns
system/lugh/src-tauri/src/: agent_session.rs  app_state.rs  chat_attachment.rs  credential.rs  file_document.rs  health_check.rs  lib.rs  main.rs  persona_bundle.rs  redmine_client.rs
system/lugh/src-tauri/src/commands/: agent.rs  browser.rs  credential.rs  document.rs  health.rs  mod.rs  persona.rs  redmine.rs  web.rs  workspace.rs
system/lugh/src-tauri/src/models/: attachment.rs  error.rs  message.rs  mod.rs  persona.rs  provider.rs  role.rs  session.rs  workspace.rs
system/lugh/src-tauri/src/provider/: claude.rs  claude_cli.rs  gemini.rs  mod.rs  openai.rs
(+174 files in other folders)
