[package]
name = "lugh"
version = "0.1.0"
description = "AgiTeamBuilder - AI Agent Team GUI"
authors = ["AgiTeamBuilder"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lugh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OS Credential Vault (macOS Keychain / Windows Credential Manager)
keyring = "3"

# HTTP client (provider API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# YAML parsing (project_state.yaml)
serde_yaml = "0.9"

# Async trait support
async-trait = "0.1"

# UUID generation for session/message IDs
uuid = { version = "1", features = ["v4"] }

# DateTime with serde support
chrono = { version = "0.4", features = ["serde"] }

# SHA-256 for persona content hash
sha2 = "0.10"
hex = "0.4"

# Chat attachment (#21): base64 encode/decode + PDF text layer extraction
base64 = "0.22"
pdf-extract = "0.7"

# SSE / streaming utilities
futures-util = "0.3"

# Error handling
thiserror = "1"

# Logging
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
